# unicode-width

./: Cargo.toml  README.md
src/: lib.rs  main.rs  truncate.rs
tests/: width_tests.rs
